--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About Me - Manavi</title>
+        <title>About Me - Hitesh</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/jpg" href="favicon.jpg">
     </head>
