--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/jpg" href="favicon.jpg">
     </head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6JL9D1E158"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-6JL9D1E158');
+    </script>
     <body>
         <div class="main">
             <img src="image.jpg" class="img">
